# Helios Engine Examples
#
# This directory contains example applications demonstrating Helios Engine features.

message(STATUS "")
message(STATUS "========================================")
message(STATUS "Configuring Helios Examples...")
message(STATUS "========================================")

# Add example subdirectories
add_subdirectory(simple)

message(STATUS "Examples configured successfully")
message(STATUS "")
